<resources>
    <string name="app_name">Commerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">User</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="basket">Basket</string>
    <string name="kullanici_girisi">Kullanıcı girişi başarılı</string>
    <string name="giris_basarili">Giriş başarılı</string>
    <string name="kayit_basarili">Kayıt başarılı.</string>
    <string name="fiyat">"Fiyat: "</string>
    <string name="urun_hakkinda">"Ürün Hakkında: "</string>
    <string name="oy_veren_kisi_sayisi">"Oy veren kişi sayısı: "</string>
    <string name="puan">"Puanı: "</string>
    <string name="markasi">"Markası: "</string>
    <string name="stok_var">Stok var</string>
    <string name="stokta_kalmadi">Stokta kalmadı</string>
    <string name="total_price_of_basket">Total price is:</string>
    <string name="turk_lirasi_sembol">₺</string>
    <string name="my_account">My Account</string>
    <string name="address_management">Address Management</string>
    <string name="back">Back</string>
    <string name="general">General</string>
    <string name="account_details">Account Details</string>
    <string name="edit_account_information">Edit your account information</string>
    <string name="account_details_icon">Account Details Icon</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_method_icon">Payment Method Icon</string>
    <string name="add_credit_debit_card">Add your credit or debit Card</string>
    <string name="edit_address">Edit your addresses</string>
    <string name="add_address">Add a new address</string>
    <string name="delivery_addresses">Delivery Addresses</string>
    <string name="delivery_addresses_icon">Delivery Addresses Icon</string>
    <string name="edit_add_new_address">Edit or add new address</string>
    <string name="security_password">Security &amp; Password</string>
    <string name="security_password_icon">Security and password icon</string>
    <string name="edit_your_password">Edit your password</string>
    <string name="setting">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_icon">Notifications Icon</string>
    <string name="manage_your_notifications">Mange your notifications</string>
    <string name="language">Language</string>
    <string name="language_icon">Language Icon</string>
    <string name="privacy_policy">Privacy &amp; Policy</string>
    <string name="privacy_policy_icon">Privacy and policy icon</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_icon">Contact us icon</string>
    <string name="log_out">Log Out</string>
    <string name="arrow_right">Arrow Right</string>
</resources>