<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/productsFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/userFragment"
        android:icon="@drawable/baseline_person_4_24"
        android:title="@string/user"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favouriteFragment"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favourite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/basketFragment"
        android:icon="@drawable/baseline_shopping_basket_24"
        android:title="@string/basket"
        app:showAsAction="ifRoom" />
</menu>
